<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="menu_view">ビューとスタイル</string>
    <string name="menu_db">データベース</string>
    <string name="menu_http">非同期通信</string>
    <string name="menu_camera_gallery">カメラ・ギャラリー</string>
    <string name="menu_billing">課金</string>
    <string name="menu_encrypt">鍵・暗号化</string>
    <string name="menu_regenerate">画面回転サンプル</string>
    <string name="menu_setting">設定</string>
    <string name="menu_logout">ログアウト</string>
    <string name="menu_lifecycle">ライフサイクル</string>

    <string name="connect">接続（成功）</string>
    <string name="connectError">接続（レスポンス内エラーコード返却）</string>
    <string name="connectDisconnect">接続（404エラー）</string>
    <string name="selectImage">画像選択！</string>
    <string name="planeText">平文</string>
    <string name="encryptText">暗号化文字列</string>
    <string name="decryptText">復号化文字列</string>
    <string name="prevActivityValue">前のアクテビティから渡された値</string>
    <string name="button">アイコン付きの通常ボタン\n2行のボタン</string>
    <string name="buttonDisable">非活性ボタン</string>
    <string name="openActivity">アクテビティを開く</string>
    <string name="openDialog">ダイアログを開く</string>
    <string name="radio1">ラジオボタン①</string>
    <string name="radio2">ラジオボタン②</string>
    <string name="radioDisable">非活性ラジオボタン</string>
    <string name="checkbox">チェックボックス</string>
    <string name="checkboxDisable">非活性チェックボックス</string>
    <string name="switchText">スイッチ</string>
    <string name="switchDisable">非活性スイッチ</string>
    <string name="textSample">普通のテキスト。\n改行テスト1\n改行テスト2\n改行テスト3。</string>
    <string name="editTextHint">入力欄ヒント</string>
    <string name="editTextDisableHint">非活性入力欄ヒント</string>
    <string name="editTextInputted">入力済の入力欄</string>
    <string name="sample">サンプル</string>
    <string name="sampleDialog">サンプルダイアログです</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="connecting">通信中</string>
    <string name="attention">Attention!</string>
    <string name="pushLeftButton">左のボタンを押しました！</string>
    <string name="pushRightButton">右のボタンを押しました！</string>
    <string name="doneCallback">コールバックされました！</string>
    <string name="useDialogFragmentDialog">画面再生成でも保持されるダイアログ</string>
    <string name="unUseDialogFragmentDialog">画面再生成でも保持されるダイアログ</string>
    <string name="noReSetCallbackListenerDialog">コールバックリスナー再設定しないダイアログ</string>
    <string name="reSetCallbackListenerDialog">コールバックリスナー再設定するダイアログ</string>
    <string name="finishAsyncTask">AsyncTaskで処理をメインスレッドに戻す！</string>
    <string name="callBackEventBus">EventBusで処理をメインスレッドに戻す！</string>
    <string name="regenerateSample">画面再生成をちゃんと考慮した場合と考慮していない場合のサンプル</string>
    <string name="disappearValue">↓画面再生が走ると、別アクテビティから渡された値が消える</string>
    <string name="notDisappearValue">↓画面再生が走っても、別アクテビティから渡された値は消えない</string>
    <string name="notReactionRegenerate">↓画面再生成が走ると、押すと反応しなくなる</string>
    <string name="reactionRegenerate">↓画面再生成が走っても、押すと反応する</string>
    <string name="notReaction">反応しなくなるよ</string>
    <string name="reaction">反応するよ</string>
    <string name="disappearRegenerateDialog">↓画面再生成が走ると、ダイアログが消える</string>
    <string name="notDisappearRegenerateDialog">↓画面再生成が走っても、ダイアログは消えない</string>
    <string name="disappearDialog">ダイアログ\n消えるよ</string>
    <string name="notDisappearDialog">ダイアログ\n消えないよ</string>
    <string name="unCatchCallbackRegenerate">↓ダイアログを開いたまま画面再生成が走ると、CallBak受け取れない</string>
    <string name="catchCallbackRegenerate">↓ダイアログを開いたまま画面再生成が走っても、Callback受け取れる</string>
    <string name="unCatchCallback">CallBak\n受け取れないよ</string>
    <string name="catchCallback">CallBak\n受け取れるよ</string>
    <string name="notKeepStateRegenerate">↓画面再生成が走ると、ボタンの状態は保持されない</string>
    <string name="keepStateRegenerate">↓画面再生成が走っても、ボタンの状態が保持される</string>
    <string name="notKeepState">状態は\n保持されないよ</string>
    <string name="keepState">状態は\n保持されるよ</string>
    <string name="notKeepMemberValue">↓画面再生成が走ると、メンバ変数の値は保持されない</string>
    <string name="keepMemberValue">↓画面再生成が走っても、メンバ変数の値が保持される</string>
    <string name="plusOne">+1</string>
    <string name="useAsyncTask">↓AsyncTaskで非同期処理中に画面再生成が走ると、例外が起こる</string>
    <string name="useEventBus">↓AsyncTask＋EventBusを使えば、非同期処理中に画面再生成が走っても対応できる</string>
    <string name="notConsiderRegenerate">画面再生成非対応</string>
    <string name="considerRegenerate">画面再生成対応</string>
    <string name="viewLog">ログを見るべし！</string>
    <string name="camera">カメラ</string>
    <string name="gallery">ギャラリー</string>
    <string name="popupMenu1">ポップアップメニュー1</string>
    <string name="popupMenu2">ポップアップメニュー2</string>
    <string name="popupMenu3">ポップアップメニュー3</string>
    <string name="openBottomSheet">ボトムシートを開く</string>
    <string name="openPopupMenu">ポップアップを開く</string>

    <string name="errorMsgPermissionDenied">許可してくれなかったから写真を選べないよ</string>
    <string name="errorMsgPermissionRequest">写真を選ぶにはパーミッション許可をしてね</string>
    <string name="errorMsgOutOfMemory">メモリが足りないよ！</string>
    <string name="errorMsgOnlineStorageImage">画像が読み込めないよ！オンラインストレージ上の画像は選択できないよ！</string>
    <string name="errorMsgActivityNotFoundError">反応するアクテビティがないみたいだよ！</string>
    <string name="errorMsgSomethingError">何らかのエラーが発生しました。</string>

</resources>
