<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/group_main"
        android:checkableBehavior="single"
        >

        <item
            android:id="@+id/menu_view"
            android:title="@string/menu_view"
            android:icon="@android:drawable/ic_menu_edit"
            />
        <item
            android:id="@+id/menu_db"
            android:title="@string/menu_db"
            android:icon="@android:drawable/ic_menu_add"
            />
        <item
            android:id="@+id/menu_http_rx_android"
            android:title="@string/menu_http_rx_android"
            android:icon="@android:drawable/ic_menu_agenda"
            />
        <item
            android:id="@+id/menu_http_async_task"
            android:title="@string/menu_http_async_task"
            android:icon="@android:drawable/ic_menu_agenda"
            />
        <item
            android:id="@+id/menu_camera_gallery"
            android:title="@string/menu_camera_gallery"
            android:icon="@android:drawable/ic_menu_camera"
            />
        <item
            android:id="@+id/menu_billing"
            android:title="@string/menu_billing"
            android:icon="@android:drawable/ic_menu_compass"
            />
        <item
            android:id="@+id/menu_encrypt"
            android:title="@string/menu_encrypt"
            android:icon="@android:drawable/ic_menu_call"
            />
    </group>

    <group
        android:id="@+id/group_sub"
        android:checkableBehavior="single"
        >

        <item
            android:id="@+id/menu_setting"
            android:title="@string/menu_setting"
            />
        <item
            android:id="@+id/menu_logout"
            android:title="@string/menu_logout"
            />
    </group>
</menu>