<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/scrollView"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/twoBlock"
        android:paddingRight="@dimen/twoBlock"
        android:paddingTop="@dimen/twoBlock"
        android:paddingBottom="@dimen/twoBlock"
        android:orientation="vertical"
        >

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/threeBlock"
            >

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/openActivity"
                android:id="@+id/buttonActivity"
                android:layout_weight="1"
                android:layout_marginRight="@dimen/halfBlock"
                android:layout_marginEnd="@dimen/halfBlock"
                />

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/openDialog"
                android:id="@+id/buttonDialog"
                android:layout_weight="1"
                android:layout_marginLeft="@dimen/halfBlock"
                />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/oneBlock"
            android:text="@string/textSample"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/editTextHint"
            android:id="@+id/editText1"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/editTextHint"
            android:text="@string/editTextInputted"
            android:id="@+id/editText2"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/oneBlock"
            android:hint="@string/editTextDisableHint"
            android:enabled="false"
            android:id="@+id/editTextDisable"/>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/oneBlock"
            android:id="@+id/radioGroup">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio1"
                android:checked="false"
                android:id="@+id/radio1"/>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio2"
                android:checked="false"
                android:id="@+id/radio2"/>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radioDisable"
                android:enabled="false"
                android:checked="false"
                android:id="@+id/radioDisable"/>
        </RadioGroup>

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/checkbox"
            android:checked="false"
            android:id="@+id/checkbox"/>

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/checkboxDisable"
            android:layout_marginBottom="@dimen/oneBlock"
            android:enabled="false"
            android:checked="false"
            android:id="@+id/checkboxDisable"/>

        <android.support.v7.widget.SwitchCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/switchText"
            android:textColor="@xml/color_text"
            android:checked="false"
            android:id="@+id/switchBtn"
            android:background="@null"/>

        <android.support.v7.widget.SwitchCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/switchDisable"
            android:textColor="@xml/color_text"
            android:enabled="false"
            android:layout_marginBottom="@dimen/twoBlock"
            android:checked="false"
            android:id="@+id/switchDisable"
            android:background="@null"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/oneBlock"
            android:drawableLeft="@android:drawable/ic_menu_camera"
            android:drawablePadding="@dimen/halfBlock"
            android:text="@string/button"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buttonDisable"
            android:enabled="false"
            />

    </LinearLayout>
</ScrollView>