<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/scrollView"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/twoBlock"
        android:paddingRight="@dimen/twoBlock"
        android:paddingTop="@dimen/twoBlock"
        android:paddingBottom="@dimen/twoBlock"
        android:orientation="vertical"
        >

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/connect"
            android:id="@+id/buttonConnect"
            android:layout_marginBottom="@dimen/oneBlock"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/connectError"
            android:id="@+id/buttonConnectError"
            android:layout_marginBottom="@dimen/oneBlock"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/connectDisconnect"
            android:id="@+id/buttonDisconnect"
            android:layout_marginBottom="@dimen/oneBlock"
            />

        <TextView
            android:id="@+id/textViewResult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            />

    </LinearLayout>

</ScrollView>